--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1742,6 +1742,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Italijanski, Fjorentinski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Florentine_dialect" target="_blank">Italian Florentine dialect</a></td>
+        <td>I' Ppiccolo Prence</td>
+        <td class="image"><a href="naslovna/italijanski_fjorentinski.jpg" target="_blank"><img src="naslovna_th/italijanski_fjorentinski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanski_fjorentinski.jpg" target="_blank"><img src="prva_th/italijanski_fjorentinski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Folinjo dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Foligno" target="_blank">Italian, Foligno dialect</a></td>
         <td>Lu Pringipe fandillu</td>
