--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1798,6 +1798,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Italijanski, Masa dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tuscan_dialects" target="_blank">Italian Massa dialect</a></td>
+        <td>El Principe Fantin</td>
+        <td class="image"><a href="naslovna/italijanski_masa-dijalekt.jpg" target="_blank"><img src="naslovna_th/italijanski_masa-dijalekt.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanski_masa-dijalekt.jpg" target="_blank"><img src="prva_th/italijanski_masa-dijalekt.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Milanski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Milanese_dialect" target="_blank">Italian, Milanese dialect</a></td>
         <td>El princip Piscinin</td>
