--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2518,6 +2518,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Nemački, Diseldorfski dijalekt</td>
+        <td><a href="https://de.wikipedia.org/wiki/D%C3%BCsseldorfer_Platt" target="_blank">German Düsseldorfer dialect</a></td>
+        <td>Dä kleene Prenz</td>
+        <td class="image"><a href="naslovna/nemacki_diseldorfski.jpg" target="_blank"><img src="naslovna_th/nemacki_diseldorfski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki_diseldorfski.jpg" target="_blank"><img src="prva_th/nemacki_diseldorfski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Nemački, istočno pomeranski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/East_Pomeranian_dialect" target="_blank">East Pomeranian dialect</a></td>
         <td>Dai klair prins</td>
