--- a/index.html
+++ b/index.html
@@ -1044,6 +1044,14 @@
         <td class="image"><a href="naslovna/bemba.jpg" target="_blank"><img src="naslovna_th/bemba.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/bemba.jpg" target="_blank"><img src="prva_th/bemba.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Berberski amaziški jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Shilha_language" target="_blank">Berber Amazighe (Tachlhit)</a></td>
+        <td>amnukal amẓyan</td>
+        <td class="image"><a href="naslovna/berberski_amaziski_taselhit.jpg" target="_blank"><img src="naslovna_th/berberski_amaziski_taselhit.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/berberski_amaziski_taselhit.jpg" target="_blank"><img src="prva_th/berberski_amaziski_taselhit.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Bosanski jezik ćirilica</td>
