--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1006,6 +1006,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Berberski amaziški jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Shilha_language" target="_blank">Berber Amazighe (Tachlhit)</a></td>
+        <td>amnukal amẓyan</td>
+        <td class="image"><a href="naslovna/berberski_amaziski_taselhit.jpg" target="_blank"><img src="naslovna_th/berberski_amaziski_taselhit.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/berberski_amaziski_taselhit.jpg" target="_blank"><img src="prva_th/berberski_amaziski_taselhit.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Bosanski jezik ćirilica</td>
         <td><a href="https://en.wikipedia.org/wiki/Bosnian_language" target="_blank">Bosnian language</a></td>
         <td>Мали принц</td>
