--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1566,6 +1566,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Hiligajnon jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Hiligaynon_language" target="_blank">Hiligaynon language</a></td>
+        <td>Ang Gamay nga Prinsipe</td>
+        <td class="image"><a href="naslovna/hiligajnon_Ilongo.jpg" target="_blank"><img src="naslovna_th/hiligajnon_Ilongo.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/hiligajnon_Ilongo.jpg" target="_blank"><img src="prva_th/hiligajnon_Ilongo.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Hindi jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Hindi" target="_blank">Hindi language</a></td>
         <td>छोटा राजकुमार</td>
