--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -870,6 +870,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Arapski, Egipatski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Egyptian_Arabic" target="_blank">Arabic Egyptian dialect</a></td>
+         <td class="rtl">الامير الصغير</td>
+        <td class="image"><a href="naslovna/arapski_egipatski.jpg" target="_blank"><img src="naslovna_th/arapski_egipatski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/arapski_egipatski.jpg" target="_blank"><img src="prva_th/arapski_egipatski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Arapski, Standardni jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Modern_Standard_Arabic" target="_blank">Modern Standard Arabic language</a></td>
         <td class="rtl">الامير الصغير</td>
