--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1158,6 +1158,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Čečenski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Chechen_language" target="_blank">Chechen language</a></td>
+        <td>Жима Эла</td>
+        <td class="image"><a href="naslovna/cecenski2.jpg" target="_blank"><img src="naslovna_th/cecenski2.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/cecenski2.jpg" target="_blank"><img src="prva_th/cecenski2.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Čedžu jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Jeju_language" target="_blank">Jeju language</a></td>
         <td></td>
