--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1870,6 +1870,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Italijanski, San Donato di Ninea</td>
+        <td><a href="https://en.wikipedia.org/wiki/San_Donato_di_Ninea" target="_blank">Italian dialect from San Donato di Ninea</a></td>
+        <td>U principìaddhu</td>
+        <td class="image"><a href="naslovna/italijanski_sandonatodininea.jpg" target="_blank"><img src="naslovna_th/italijanski_sandonatodininea.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanski_sandonatodininea.jpg" target="_blank"><img src="prva_th/italijanski_sandonatodininea.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Senigalski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Senigallia" target="_blank">Italian Senigallia dialect</a></td>
         <td>el Principiŋ</td>
