--- a/index.html
+++ b/index.html
@@ -2582,11 +2582,19 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Nemački, bezelski dijalekt</td>
+        <td>Nemački, bazelski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Basel_German" target="_blank">Basel German dialect</a></td>
         <td>Dr gläi Brinz</td>
         <td class="image"><a href="naslovna/nemacki-bazelski.jpg" target="_blank"><img src="naslovna_th/nemacki-bazelski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/nemacki-bazelski.jpg" target="_blank"><img src="prva_th/nemacki-bazelski.jpg" width="50px"></a></td>
+      </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Nemački, bečki dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Viennese_German" target="_blank">German Viennese</a></td>
+        <td>Der kleene Prinz</td>
+        <td class="image"><a href="naslovna/nemacki_becki.jpg" target="_blank"><img src="naslovna_th/nemacki_becki.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki_becki.jpg" target="_blank"><img src="prva_th/nemacki_becki.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
