--- a/index.html
+++ b/index.html
@@ -2592,7 +2592,7 @@
         <td class="number"><span class="auto"></span></td>
         <td>Nemački, bečki dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Viennese_German" target="_blank">German Viennese</a></td>
-        <td>Der kleene Prinz</td>
+        <td>Da Klane Prinz</td>
         <td class="image"><a href="naslovna/nemacki_becki.jpg" target="_blank"><img src="naslovna_th/nemacki_becki.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/nemacki_becki.jpg" target="_blank"><img src="prva_th/nemacki_becki.jpg" width="50px"></a></td>
       </tr>
