--- a/index.html
+++ b/index.html
@@ -2622,6 +2622,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Nemački, Falački jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Palatine_German_dialects" target="_blank">German Palatine or Pfaelzisch</a></td>
+        <td>De kläne Prinƶ</td>
+        <td class="image"><a href="naslovna/nemacki_falacki.jpg" target="_blank"><img src="naslovna_th/nemacki_falacki.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki_falacki.jpg" target="_blank"><img src="prva_th/nemacki_falacki.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Nemački, istočno pomeranski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/East_Pomeranian_dialect" target="_blank">East Pomeranian dialect</a></td>
         <td>Dai klair prins</td>
