--- a/index.html
+++ b/index.html
@@ -2598,6 +2598,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Nemački, berlinski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Berlin_German" target="_blank">German Berlinish</a></td>
+        <td>Der kleene Prinz</td>
+        <td class="image"><a href="naslovna/nemacki_berlinski.jpg" target="_blank"><img src="naslovna_th/nemacki_berlinski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki_berlinski.jpg" target="_blank"><img src="prva_th/nemacki_berlinski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Nemački, Bern dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Bernese_German" target="_blank">Bernese German</a></td>
         <td>Der Chly Prinz</td>
@@ -2638,7 +2646,7 @@
       </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Nemački, oblast palanine Ron</td>
+        <td>Nemački, oblast planine Ron</td>
         <td><a href="https://en.wikipedia.org/wiki/Rh%C3%B6n_Mountains" target="_blank">German from the Rhön mountains</a></td>
         <td>Es klei Prinzee</td>
         <td class="image"><a href="naslovna/nemacki_ronplanine.jpg" target="_blank"><img src="naslovna_th/nemacki_ronplanine.jpg" width="50px"></a></td>
