--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2604,6 +2604,14 @@
         <td class="image"><a href="naslovna/pomerano.jpg" target="_blank"><img src="naslovna_th/pomerano.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/pomerano.jpg" target="_blank"><img src="prva_th/pomerano.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Nemački, niskonemački jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Low_German" target="_blank">German Plattdüütsch (Low German)</a></td>
+        <td>De lütte Prinz</td>
+        <td class="image"><a href="naslovna/nisko_nemacki.jpg" target="_blank"><img src="naslovna_th/nisko_nemacki.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nisko_nemacki.jpg" target="_blank"><img src="prva_th/nisko_nemacki.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Nemački, oblast planine Ron</td>
