--- a/index.html
+++ b/index.html
@@ -1622,6 +1622,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Haustek, Potosi dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Huastec_language" target="_blank">Haustec, Potosino dialect</a></td>
+        <td>An Tsakam Ts'alej</td>
+        <td class="image"><a href="naslovna/tenek_haustek-west.jpg" target="_blank"><img src="naslovna_th/tenek_haustek-west.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/tenek_haustek-west.jpg" target="_blank"><img src="prva_th/tenek_haustek-west.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Hebrejski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Hebrew_language" target="_blank">Hebrew language</a></td>
         <td class="rtl">הנסיך הקטן</td>
