--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2654,6 +2654,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Nemački, Zoloturn dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Solothurn" target="_blank">German Solothurn dialect</a></td>
+        <td>Der Chly Prinz</td>
+        <td class="image"><a href="naslovna/nemacki_zoloturn.jpg" target="_blank"><img src="naslovna_th/nemacki_zoloturn.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki_zoloturn.jpg" target="_blank"><img src="prva_th/nemacki_zoloturn.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Nepalski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Nepali_language" target="_blank">Nepali language</a></td>
         <td>फुच्चे राजकुमार</td>
