--- a/index.html
+++ b/index.html
@@ -2590,6 +2590,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Nemački, bavarski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Bavarian_language" target="_blank">German Bavarian language</a></td>
+        <td>Da kloa Prinz</td>
+        <td class="image"><a href="naslovna/nemacki_bavarski.jpg" target="_blank"><img src="naslovna_th/nemacki_bavarski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki_bavarski.jpg" target="_blank"><img src="prva_th/nemacki_bavarski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Nemački, bazelski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Basel_German" target="_blank">Basel German dialect</a></td>
         <td>Dr gläi Brinz</td>
