--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1860,6 +1860,14 @@
         <td class="image"><a href="naslovna/italijanski-milanski_dijalekt.jpg" target="_blank"><img src="naslovna_th/italijanski-milanski_dijalekt.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/italijanski-milanski_dijalekt.jpg" target="_blank"><img src="prva_th/italijanski-milanski_dijalekt.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Italijanski, dijalekt oblasti Monte Kompatri</td>
+        <td><a href="https://en.wikipedia.org/wiki/Monte_Compatri" target="_blank">Italian dialect from Monte Compatri</a></td>
+        <td>Lu Pringipe ciucu</td>
+        <td class="image"><a href="naslovna/italijanski_montecompatri.jpg" target="_blank"><img src="naslovna_th/italijanski_montecompatri.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanski_montecompatri.jpg" target="_blank"><img src="prva_th/italijanski_montecompatri.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Napolitanski Pičentino dijalekt</td>
