--- a/index.html
+++ b/index.html
@@ -1902,7 +1902,7 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Italijanski, dijalekt oblasti Monte Komparti</td>
+        <td>Italijanski, dijalekt oblasti Monte Kompatri</td>
         <td><a href="https://en.wikipedia.org/wiki/Monte_Compatri" target="_blank">Italian dialect from Monte Compatri</a></td>
         <td>Lu Pringipe ciucu</td>
         <td class="image"><a href="naslovna/italijanski_montecompatri.jpg" target="_blank"><img src="naslovna_th/italijanski_montecompatri.jpg" width="50px"></a></td>
