--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2644,6 +2644,14 @@
         <td class="image"><a href="naslovna/nemacki_ronplanine.jpg" target="_blank"><img src="naslovna_th/nemacki_ronplanine.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/nemacki_ronplanine.jpg" target="_blank"><img src="prva_th/nemacki_ronplanine.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Nemački, Rurski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Ruhrdeutsch" target="_blank">German Ruhr District language</a></td>
+        <td>De kleene Prinz</td>
+        <td class="image"><a href="naslovna/nemacki_rurski.jpg" target="_blank"><img src="naslovna_th/nemacki_rurski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki_rurski.jpg" target="_blank"><img src="prva_th/nemacki_rurski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Nemački švapski jezik</td>
