--- a/index.html
+++ b/index.html
@@ -2646,6 +2646,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Nemački, Cug dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Zug" target="_blank">erman Zuger language</a></td>
+        <td>De chly Prinz</td>
+        <td class="image"><a href="naslovna/nemacki_cug.jpg" target="_blank"><img src="naslovna_th/nemacki_cug.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki_cug.jpg" target="_blank"><img src="prva_th/nemacki_cug.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Nemački, Diseldorfski dijalekt</td>
         <td><a href="https://de.wikipedia.org/wiki/D%C3%BCsseldorfer_Platt" target="_blank">German Düsseldorfer dialect</a></td>
         <td>Dä kleene Prenz</td>
