--- a/index.html
+++ b/index.html
@@ -2636,6 +2636,14 @@
         <td class="image"><a href="naslovna/nemacki_bern.jpg" target="_blank"><img src="naslovna_th/nemacki_bern.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/nemacki_bern.jpg" target="_blank"><img src="prva_th/nemacki_bern.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Nemački, binderski dijalekt</td>
+        <td><a href="https://de.wikipedia.org/wiki/B%C3%BCndnerdeutsch" target="_blank">German Bündnertütsch</a></td>
+        <td>Dr klini Prinz</td>
+        <td class="image"><a href="naslovna/nemacki_binderski.jpg" target="_blank"><img src="naslovna_th/nemacki_binderski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki_binderski.jpg" target="_blank"><img src="prva_th/nemacki_binderski.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Nemački, Cimbrijski jezik</td>
