--- a/index.html
+++ b/index.html
@@ -2676,6 +2676,14 @@
         <td class="image"><a href="naslovna/nemacki_falacki.jpg" target="_blank"><img src="naslovna_th/nemacki_falacki.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/nemacki_falacki.jpg" target="_blank"><img src="prva_th/nemacki_falacki.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Nemački, glarnerski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/East_Franconian_German" target="_blank">German Glarner dialect</a></td>
+        <td>Dr chlii Prinz</td>
+        <td class="image"><a href="naslovna/nemacki_glanerski.jpg" target="_blank"><img src="naslovna_th/nemacki_glanerski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki_glanerski.jpg" target="_blank"><img src="prva_th/nemacki_glanerski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Nemački, istočno pomeranski dijalekt</td>
