--- a/index.html
+++ b/index.html
@@ -886,6 +886,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Alzaški jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Alsatian_dialect" target="_blank">Alsatian dialect</a></td>
+        <td>D'r klein Prinӡ</td>
+        <td class="image"><a href="naslovna/alzaski.jpg" target="_blank"><img src="naslovna_th/alzaski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/alzaski.jpg" target="_blank"><img src="prva_th/alzaski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Alzaški donji Alemanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Alsatian_dialect" target="_blank">Alsatian lower Alemanic</a></td>
         <td>D'r kläin Prìnz</td>
