--- a/index.html
+++ b/index.html
@@ -2278,6 +2278,14 @@
       </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Korzički jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Corsican_language" target="_blank">Corsican language</a></td>
+        <td>U Principellu</td>
+        <td class="image"><a href="naslovna/korzicki.jpg" target="_blank"><img src="naslovna_th/korzicki.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/korzicki.jpg" target="_blank"><img src="prva_th/korzicki.jpg" width="50px"></a></td>
+      </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Kumički jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Kumyk_language" target="_blank">Kumyk language</a></td>
         <td>Гиччинев Пача</td>
