--- a/index.html
+++ b/index.html
@@ -2070,6 +2070,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Kalabrijski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Languages_of_Calabria" target="_blank">Italian of Calabria languages</a></td>
+        <td>U Principuӡӡeji</td>
+        <td class="image"><a href="naslovna/kalabrijski.jpg" target="_blank"><img src="naslovna_th/kalabrijski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/kalabrijski.jpg" target="_blank"><img src="prva_th/kalabrijski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Karačajsko-balkarski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Karachay-Balkar" target="_blank">Karachay-Balkar language</a></td>
         <td>Гитче Принс</td>
