--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2032,7 +2032,7 @@
         <td class="number"><span class="auto"></span></td>
         <td>Kalabrijski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Languages_of_Calabria" target="_blank">Italian of Calabria languages</a></td>
-        <td>U Principuӡӡeji</td>
+        <td>U Principuӡӡejin</td>
         <td class="image"><a href="naslovna/kalabrijski.jpg" target="_blank"><img src="naslovna_th/kalabrijski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/kalabrijski.jpg" target="_blank"><img src="prva_th/kalabrijski.jpg" width="50px"></a></td>
       </tr>
