--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -3086,6 +3086,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Sicilijanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Sicilian_language" target="_blank">Sicilian language</a></td>
+        <td>̚̚'U Principinu</td>
+        <td class="image"><a href="naslovna/sicilijanski.jpg" target="_blank"><img src="naslovna_th/sicilijanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/sicilijanski.jpg" target="_blank"><img src="prva_th/sicilijanski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Sicilijanski jezik - adaptacija za pozorište</td>
         <td><a href="https://en.wikipedia.org/wiki/Sicilian_language" target="_blank">Sicilian language - Adaptation for the Theater</a></td>
         <td>U cuntu ru Principini</td>
