--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2334,6 +2334,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Luksemburški jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Luxembourgish" target="_blank">Luxembourgish language</a></td>
+        <td>De Klenge Prënƶ</td>
+        <td class="image"><a href="naslovna/luksemburski.jpg" target="_blank"><img src="naslovna_th/luksemburski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/luksemburski.jpg" target="_blank"><img src="prva_th/luksemburski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Lule Sami jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Lule_S%C3%A1mi" target="_blank">Lule Sami language</a></td>
         <td>Unna prinsasj</td>
