--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2684,6 +2684,14 @@
         <td class="image"><a href="naslovna/pomerano.jpg" target="_blank"><img src="naslovna_th/pomerano.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/pomerano.jpg" target="_blank"><img src="prva_th/pomerano.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Nemački, kelnski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Colognian_dialect" target="_blank">German Kölsch dialect</a></td>
+        <td>Dä kleine Prinz</td>
+        <td class="image"><a href="naslovna/nemacki_kelnski.jpg" target="_blank"><img src="naslovna_th/nemacki_kelnski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki_kelnski.jpg" target="_blank"><img src="prva_th/nemacki_kelnski.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Nemački, niskonemački jezik</td>
