--- a/index.html
+++ b/index.html
@@ -2732,6 +2732,14 @@
         <td class="image"><a href="naslovna/nemacki_kelnski.jpg" target="_blank"><img src="naslovna_th/nemacki_kelnski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/nemacki_kelnski.jpg" target="_blank"><img src="prva_th/nemacki_kelnski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Nemački, koruški dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Carinthian_dialect_group" target="_blank">German Carinthian dialect</a></td>
+        <td>Da klaane Prinz</td>
+        <td class="image"><a href="naslovna/nemacki_koruski.jpg" target="_blank"><img src="naslovna_th/nemacki_koruski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki_koruski.jpg" target="_blank"><img src="prva_th/nemacki_koruski.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Nemački, niskonemački jezik</td>
