--- a/index.html
+++ b/index.html
@@ -2708,13 +2708,21 @@
         <td class="image"><a href="naslovna/nemacki_falacki.jpg" target="_blank"><img src="naslovna_th/nemacki_falacki.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/nemacki_falacki.jpg" target="_blank"><img src="prva_th/nemacki_falacki.jpg" width="50px"></a></td>
       </tr>
-       <tr>
+      <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Nemački, glarnerski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/East_Franconian_German" target="_blank">German Glarner dialect</a></td>
         <td>Dr chlii Prinz</td>
         <td class="image"><a href="naslovna/nemacki_glanerski.jpg" target="_blank"><img src="naslovna_th/nemacki_glanerski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/nemacki_glanerski.jpg" target="_blank"><img src="prva_th/nemacki_glanerski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Nemački, hesenski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Hessian_dialects" target="_blank">German Hessian dialect</a></td>
+        <td>De klaane Prinz</td>
+        <td class="image"><a href="naslovna/nemacki_hesenski.jpg" target="_blank"><img src="naslovna_th/nemacki_hesenski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki_hesenski.jpg" target="_blank"><img src="prva_th/nemacki_hesenski.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
