--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2678,6 +2678,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Nemački, hesenski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Hessian_dialects" target="_blank">German Hessian dialect</a></td>
+        <td>De klaane Prinz</td>
+        <td class="image"><a href="naslovna/nemacki_hesenski.jpg" target="_blank"><img src="naslovna_th/nemacki_hesenski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki_hesenski.jpg" target="_blank"><img src="prva_th/nemacki_hesenski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Nemački, istočno pomeranski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/East_Pomeranian_dialect" target="_blank">East Pomeranian dialect</a></td>
         <td>Dai klair prins</td>
