--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2318,6 +2318,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Limburški, venio dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Venlo_dialect" target="_blank">Limburgish Venlo Dialect</a></td>
+        <td>'t Klein Prinske</td>
+        <td class="image"><a href="naslovna/limburski_venio.jpg" target="_blank"><img src="naslovna_th/limburski_venio.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/limburski_venio.jpg" target="_blank"><img src="prva_th/limburski_venio.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Limonski kreolski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Limonese_Creole" target="_blank">Limonese Creole dialect</a></td>
         <td>Di Likl Prins</td>
