--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2108,6 +2108,14 @@
         <td class="image"><a href="naslovna/katalonskialgereze.jpg" target="_blank"><img src="naslovna_th/katalonskialgereze.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/katalonskialgereze.jpg" target="_blank"><img src="prva_th/katalonskialgereze.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Katalonski, balearski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Balearic_Catalan" target="_blank">Catalan of the Balearic Islands</a></td>
+        <td>Es Princesêt</td>
+        <td class="image"><a href="naslovna/katalonski_balearski.jpg" target="_blank"><img src="naslovna_th/katalonski_balearski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/katalonski_balearski.jpg" target="_blank"><img src="prva_th/katalonski_balearski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Katalonski, Majorkan dijalekt</td>
