--- a/index.html
+++ b/index.html
@@ -2894,6 +2894,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Otomi meskital jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Northwestern_Otomi" target="_blank">Otomi of the Mezquital Valley</a></td>
+        <td>Ra zi  ts'u̠nt'u̠ dängandä</td>
+        <td class="image"><a href="naslovna/otomi_meskital.jpg" target="_blank"><img src="naslovna_th/otomi_meskital.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/otomi_meskital.jpg" target="_blank"><img src="prva_th/otomi_meskital.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Pandžabi jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Punjabi_language" target="_blank">Punjabi language</a></td>
         <td>ਛੋਟਾ ਸ਼ਹਿਜ਼ਾਦਾ</td>
