--- a/index.html
+++ b/index.html
@@ -2854,6 +2854,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Oksitanski Alpski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Vivaro-Alpine_dialect" target="_blank">Occitan Alpine dialect</a></td>
+        <td>Lo Principet</td>
+        <td class="image"><a href="naslovna/oksitanski_alpski.jpg" target="_blank"><img src="naslovna_th/oksitanski_alpski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/oksitanski_alpski.jpg" target="_blank"><img src="prva_th/oksitanski_alpski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Oksitanski Aranski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Aranese_dialect" target="_blank">Occitan Aranese language</a></td>
         <td>Eth petit prince</td>
