--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2812,6 +2812,14 @@
         <td class="image"><a href="naslovna/odzibva.jpg" target="_blank"><img src="naslovna_th/odzibva.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/odzibva.jpg" target="_blank"><img src="prva_th/odzibva.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Oksitanski Alpski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Vivaro-Alpine_dialect" target="_blank">Occitan Alpine dialect</a></td>
+        <td>Lo Principet</td>
+        <td class="image"><a href="naslovna/oksitanski_alpski.jpg" target="_blank"><img src="naslovna_th/oksitanski_alpski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/oksitanski_alpski.jpg" target="_blank"><img src="prva_th/oksitanski_alpski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Oksitanski Aranski jezik</td>
