--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -878,6 +878,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Aragonski, benaskeški jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Benasquese_dialect" target="_blank">Aragonese benasquese language</a></td>
+        <td>El Prinsipet</td>
+        <td class="image"><a href="naslovna/aragonski_benaskeški.jpg" target="_blank"><img src="naslovna_th/aragonski_benaskeški.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/aragonski_benaskeški.jpg" target="_blank"><img src="prva_th/aragonski_benaskeški.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Arapski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Arabic" target="_blank">Arabic language</a></td>
         <td class="rtl">الامير الصغير</td>
