--- a/index.html
+++ b/index.html
@@ -3054,6 +3054,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Romanš - grišun dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Romansh_language#Rumantsch_Grischun" target="_blank">Romansh Grischun</a></td>
+        <td>Il Pitschen Prinzi</td>
+        <td class="image"><a href="naslovna/romans_grisun.jpg" target="_blank"><img src="naslovna_th/romans_grisun.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/romans_grisun.jpg" target="_blank"><img src="prva_th/romans_grisun.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Romanš - puter dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Put%C3%A8r" target="_blank">Romansh putèr</a></td>
         <td>Il Pitschen Prinz</td>
