--- a/index.html
+++ b/index.html
@@ -1470,6 +1470,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Francuski Poatvanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Poitevin_dialect" target="_blank">French Poitevin dialect</a></td>
+        <td>Le P'tiot Prince</td>
+        <td class="image"><a href="naslovna/francuski_poatvanski.jpg" target="_blank"><img src="naslovna_th/francuski_poatvanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/francuski_poatvanski.jpg" target="_blank"><img src="prva_th/francuski_poatvanski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Frankoprovansalski jezik, dijalekt kantona Fribur/Frajburg</td>
         <td><a href="https://en.wikipedia.org/wiki/Franco-Proven%C3%A7al_language" target="_blank">Franco-Provençal (Arpitan) Canton of Fribourg dialect</a></td>
         <td>Le Piti Prinhyo</td>
