--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1428,6 +1428,14 @@
         <td class="image"><a href="naslovna/francuski-konte.jpg" target="_blank"><img src="naslovna_th/francuski-konte.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/francuski-konte.jpg" target="_blank"><img src="prva_th/francuski-konte.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Francuski Poatvanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Poitevin_dialect" target="_blank">French Poitevin dialect</a></td>
+        <td>Le P'tiot Prince</td>
+        <td class="image"><a href="naslovna/francuski_poatvanski.jpg" target="_blank"><img src="naslovna_th/francuski_poatvanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/francuski_poatvanski.jpg" target="_blank"><img src="prva_th/francuski_poatvanski.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Frankoprovansalski jezik, dijalekt kantona Fribur/Frajburg</td>
