--- a/index.html
+++ b/index.html
@@ -2766,6 +2766,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Nemački, južno franački dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/South_Franconian_German" target="_blank">German South-Franconian dialect</a></td>
+        <td>De kloine Prinz</td>
+        <td class="image"><a href="naslovna/nemacki_juznofranacki.jpg" target="_blank"><img src="naslovna_th/nemacki_juznofranacki.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki_juznofranacki.jpg" target="_blank"><img src="prva_th/nemacki_juznofranacki.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Nemački, kelnski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Colognian_dialect" target="_blank">German Kölsch dialect</a></td>
         <td>Dä kleine Prinz</td>
