--- a/index.html
+++ b/index.html
@@ -2662,6 +2662,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Nemački, Apencel-Ineroden dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Appenzell_Innerrhoden" target="_blank">German Appenzell-Innerrhoden dialect</a></td>
+        <td>De chlin Prinƶ</td>
+        <td class="image"><a href="naslovna/nemacki_apencel-ineroden.jpg" target="_blank"><img src="naslovna_th/nemacki_apencel-ineroden.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki_apencel-ineroden.jpg" target="_blank"><img src="prva_th/nemacki_apencel-ineroden.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Nemački, bavarski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Bavarian_language" target="_blank">German Bavarian language</a></td>
         <td>Da kloa Prinz</td>
