--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2620,6 +2620,14 @@
         <td class="image"><a href="naslovna/nemackinovi.jpg" target="_blank"><img src="naslovna_th/nemackinovi.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/nemackinovi.jpg" target="_blank"><img src="prva_th/nemackinovi.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Nemački, Apencel-Ineroden dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Appenzell_Innerrhoden" target="_blank">German Appenzell-Innerrhoden dialect</a></td>
+        <td>De chlin Prinƶ</td>
+        <td class="image"><a href="naslovna/nemacki_apencel-ineroden.jpg" target="_blank"><img src="naslovna_th/nemacki_apencel-ineroden.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki_apencel-ineroden.jpg" target="_blank"><img src="prva_th/nemacki_apencel-ineroden.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Nemački, bavarski dijalekt</td>
