--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1438,6 +1438,14 @@
       </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Francuski Poatvansko-sentonžanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Poitevin%E2%80%93Saintongeais" target="_blank">French Poitou-Saintonge dialect</a></td>
+        <td>Le Prénçot</td>
+        <td class="image"><a href="naslovna/francuski_poatvansko-sentonžanski.jpg" target="_blank"><img src="naslovna_th/francuski_poatvansko-sentonžanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/francuski_poatvansko-sentonžanski.jpg" target="_blank"><img src="prva_th/francuski_poatvansko-sentonžanski.jpg" width="50px"></a></td>
+      </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Frankoprovansalski jezik, dijalekt kantona Fribur/Frajburg</td>
         <td><a href="https://en.wikipedia.org/wiki/Franco-Proven%C3%A7al_language" target="_blank">Franco-Provençal (Arpitan) Canton of Fribourg dialect</a></td>
         <td>Le Piti Prinhyo</td>
